--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hm",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://BgJw.github.io/",
+  "homepage": "http://BgJw.github.io/BgJw.github.io",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
