--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
-    "sass": "^1.56.2",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -51,6 +50,7 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.6",
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "sass": "^1.56.2"
   }
 }
